--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "element-theme-chalk": "^2.7.2",
     "element-ui": "^2.8.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
